third_party/rust/chromium_crates_io/vendor/thiserror-v2/tests/ui/transparent-enum-source.stderr
error: transparent variant can't contain #[source]
 --> tests/ui/transparent-enum-source.rs:6:11
  |
6 |     Other(#[source] anyhow::Error),
  |           ^^^^^^^^^
